items rest endpoints and swagger
